--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:seed": "npx tsx prisma/seed.ts",
+    "db:clean": "npx tsx prisma/clean-db.ts",
     "db:studio": "prisma studio"
   },
   "dependencies": {
