--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint",
     "db:generate": "prisma generate",
@@ -39,6 +40,7 @@
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
